--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,10 +55,12 @@
 <div class="flip-card">
     <div class="flip-card-inner">
         <div class="flip-card-front">
-            <img src="./images/1.png" alt="Avatar" style="width:300px;height:300px;">
+            <img src="<%= image %>" alt="Avatar" style="width:300px;height:300px;">
         </div>
         <div class="flip-card-back">
             <h1>John Doe</h1>
+            <h1><%= image %>
+            </h1>
             <p>Architect & Engineer</p>
             <p>We love that guy</p>
         </div>
